using the list of long